WISH: keyboard modification via esc-sequences.
WISH: line-rewrapping on resize
WISH: hotkey font resizing (possible via keymaps)
WISH: searchable backlog
WISH: meta-tagging of data by regex (my dream project)
WISH: double-click: more intelligent (urls etc.)
WISH: OnTheSpot editing.
WISH: tabbed windows (hey, just use screen...)
WISH: just for fun, do shade and tint with XRender.

5.0  Fri Feb 11 18:31:48 CET 2005
	- document a race-free hack to start urxvtd.
        - document all(?) environment variables used and set by rxvt.
        - bring xgetdefault-style resource file ordering more in line with
          Xt, and document it in rxvt(1).
        - correctly use screen-dependent resources when --enable-xgetdefault,
          and also fix some memory bugs (thanks to Thierry Reding for
          his patience and time in tracking this down).
        - bring own resource parsing more in line with X resource parsing,
          most notably, don't remove double quotes.
	- compile fix for freebsd (no ut_id) (Thierry Thomas).
        - clean up utmp and pty on X I/O errors and signals (idea
          by Joël Riou).
        - "un"document -xrm, it never really worked, was only
          available with --enable-xgetdefault, is not necessary
          and is surprisingly hard to implement.
        - shaved off some code segment size.
        - various code cleanups.
        - more keysym-mapping fixes.

4.9  Thu Feb  3 09:52:03 CET 2005
        - nuke out utmp entries completely. Should be fixed in
          original rxvt, too. (reported by James Michael Fultz).
        - resizes wil now correctly refresh the displayed text when
          -pixmap is active.
        - new option/resource imFont.
        - document --tripleclickwords/-tcw.
        - select logical instead of physical lines when doing a triple-click.
        - reordered help listing to group similar options together.
        - handle SIGINT the same way as SIGTERM (reported by Joël Riou).